--- a/test/demo_app/pubspec.yaml
+++ b/test/demo_app/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   ndk: ^0.5.0
   nostr_widgets:
     path: ../../
+  path: ^1.9.1
+  path_provider: ^2.1.5
+  sembast: ^3.8.5+1
+  sembast_cache_manager: ^1.0.2
+  sembast_web: ^2.4.2
 
 dev_dependencies:
   flutter_test:
