--- a/test/demo_app/pubspec.yaml
+++ b/test/demo_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
+  flutter_secure_storage: ^9.2.4
   get: ^4.7.2
   intl: any
   ndk: ^0.5.0
@@ -22,6 +23,7 @@ dependencies:
   sembast: ^3.8.5+1
   sembast_cache_manager: ^1.0.2
   sembast_web: ^2.4.2
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
