add bunker login + fix

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   nip07_event_signer: ^1.0.2
   nip19: ^0.2.0
   pretty_qr_code: ^3.5.0
+  toastification: ^3.0.3
   url_launcher: ^6.3.2
 
 dev_dependencies:
